--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -86,6 +95,32 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.1</version>
+          <configuration>
+              <port>8080</port>
+              <path>/webManager</path>
+              <url>http://192.168.137.137:8080/manager/text</url>
+              <server>tomcat7</server>
+              <uriEncoding>utf-8</uriEncoding>
+              <username>tomcat</username>
+              <password>123456</password>
+
+          </configuration>
+        </plugin>
+<!--          <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>2.1</version>
+              <configuration>
+                  <path>/</path>
+                  <port>9090</port>
+                  <server>tomcat7</server>
+                  <uriEncoding>utf-8</uriEncoding>
+              </configuration>
+          </plugin>-->
       </plugins>
     </pluginManagement>
   </build>
